---
source: cli/tests/pipeline.rs
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
This command group contains the commands to view & interact with an application’s pipeline

Usage: wukong pipeline [OPTIONS] <COMMAND>

Commands:
  list       List the current pipelines of the application
  describe   Show the details of a pipeline
  ci-status  Show the build status and (possible) errors on branch ci pipeline
  help       Print this message or the help of the given subcommand(s)

Options:
  -a, --application <APPLICATION>  Override the application name that the CLI will perform the
                                   command against. If the flag is not used, then the CLI will use
                                   the default application name from the config
  -v, --verbose...                 Use verbos output. More output per occurrence.
                                   
                                   By default, it'll only report errors.
                                   `-v` show warnings
                                   `-vv` show info
                                   `-vvv` show debug
                                   `-vvvv` show trace
  -q, --quiet...                   Do not print log message
      --canary                     Use the Canary channel API
  -h, --help                       Print help

